# 3D_object_detection_and_tracking

./: .gitignore  Dockerfile  README.md
.github/workflows/: clang-tools.yml
3d_detection_and_tracking/: CMakeLists.txt
3d_detection_and_tracking/examples/: example1.cpp  example2.cpp  example3.cpp  kitti_detection.cpp  kitti_tracking.cpp  real_time_kitti_tracking.cpp
3d_detection_and_tracking/include/3d_detection_and_tracking/: Type.h
3d_detection_and_tracking/modules/: CMakeLists.txt
3d_detection_and_tracking/modules/object_tracking/: CMakeLists.txt
3d_detection_and_tracking/modules/object_tracking/include/object_tracking/: Association.h  Dataloader.h  EKF.h  Measurement.h  Tracker.h
3d_detection_and_tracking/modules/object_tracking/src/object_tracking/: Association.cpp  Dataloader.cpp  EKF.cpp  Measurement.cpp  Tracker.cpp
3d_detection_and_tracking/modules/result_viewer/: CMakeLists.txt
3d_detection_and_tracking/modules/result_viewer/include/result_viewer/: Projection.h  Viewer.h
3d_detection_and_tracking/modules/result_viewer/src/result_viewer/: Projection.cpp  Viewer.cpp
VirConv/pcdet/: version.py
VirConv/pcdet.egg-info/: PKG-INFO
VirConv/pcdet/datasets/: __init__.py
VirConv/pcdet/datasets/kitti/: kitti_dataset_mm.py
VirConv/tools/: log-test.txt  test.py
VirConv/tools/cfgs/dataset_configs/: kitti_dataset.yaml
VirConv/tools/cfgs/models/kitti/: VirConv-L.yaml
VirConv/tools/eval_utils/: eval_utils.py
docker/: Dockerfile  README.md
lidar_calibration/: CMakeLists.txt  package.xml
lidar_preprocessing/: CMakeLists.txt  package.xml
modules/: test.cpp
object_dection/: CMakeLists.txt  package.xml
object_location/: CMakeLists.txt  package.xml
object_tracking/: CMakeLists.txt  package.xml
object_tracking/include/modules/: EKF.h  Measurement.h  Tracker.h
object_tracking/include/object_tracking/: Association.h  Dataloader.h  EKF.h  Measurement.h  Tracker.h  type.h
object_tracking/kitti_data/ImageSets/: test.txt
object_tracking/kitti_data/calib/: 000193.txt
object_tracking/kitti_data/data/: 000013.txt  000015.txt  000018.txt  000026.txt  000033.txt  000034.txt  000036.txt  000037.txt  000038.txt  000039.txt  000041.txt  000050.txt  000052.txt  000056.txt  000064.txt  000070.txt  000071.txt  000072.txt  000077.txt  000083.txt  000085.txt  000086.txt  000090.txt  000092.txt  000103.txt  000105.txt  000106.txt  000107.txt  000108.txt  000111.txt  000112.txt  000121.txt  000123.txt  000128.txt  000132.txt  000133.txt  000134.txt  000135.txt  000136.txt  000141.txt  (+75 more)
object_tracking/kitti_data/label_2/: 000001.txt  000012.txt  000014.txt  000016.txt  000017.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000035.txt  000040.txt  000042.txt  000043.txt  000044.txt  000045.txt  000046.txt  000047.txt  000048.txt  000049.txt  000051.txt  000053.txt  000054.txt  000055.txt  000057.txt  000058.txt  000059.txt  000060.txt  000061.txt  000062.txt  000063.txt  000065.txt  (+210 more)
object_tracking/src/: example.cpp
object_tracking/src/modules/: EKF.cpp  Measurement.cpp  Tracker.cpp
object_tracking/src/object_tracking/: Association.cpp  Dataloader.cpp  EKF.cpp  Measurement.cpp  Tracker.cpp
result_viewer/: CMakeLists.txt
result_viewer/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  main
result_viewer/include/result_viewer/: Dataloader.h  Projection.h  Type.h  Viewer.h
result_viewer/src/: main.cpp
result_viewer/src/result_viewer/: Dataloader.cpp  Projection.cpp  Viewer.cpp
showing_result/: CMakeLists.txt  package.xml
surround_view_monitor/: CMakeLists.txt  package.xml
